# KonfAI

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: KonfAI_ci.yml  commit-hygiene.yml  konfai_apps_ci.yml  konfai_ci.yml  pre-commit.yml  publish.yml  python-publish.yml
apps/: README.md
apps/impact_synth/: README.md  pyproject.toml
apps/impact_synth/impact_synth_konfai/: __init__.py  cli.py
apps/mrsegmentator/: README.md  pyproject.toml
apps/mrsegmentator/mrsegmentator_konfai/: __init__.py  cli.py
apps/totalsegmentator/: README.md  pyproject.toml
apps/totalsegmentator/totalsegmentator_konfai/: __init__.py  cli.py
docker/: Dockerfile  README.md  entrypoint.sh
docs/: requirements.txt
docs/source/: architecture.md  conf.py  contributing.md  development.md  index.rst  konfai.data.rst  konfai.metric.rst  konfai.network.rst  konfai.rst  konfai.utils.rst  modules.rst  quickstart.rst  troubleshooting.md
docs/source/_static/: custom.css
docs/source/concepts/: apps.md  configuration.md  datasets.md  execution-flow.md  imaging-formats.md  index.md  model-graph.md  yaml-model-builder.md
docs/source/config_guide/: evaluation.md  index.rst  patterns.md  prediction.md  training.md
docs/source/examples/: index.md  segmentation.md  synthesis.md
docs/source/getting-started/: installation.md
docs/source/reference/: app-server-api.md  cli.md  environment.md  index.rst
docs/source/reference/api/: apps.rst  configuration.rst  data.rst  extension-points.md  index.rst  models.rst  public-api.rst  workflows.rst
docs/source/usage/: apps.md  custom-models.md  docker.md  evaluation.rst  index.rst  prediction.rst  remote-server.md  testing.md  training.rst
examples/: README.md
examples/Segmentation/: Config.yml  Evaluation.yml  Prediction.yml  README.md  Segmentation_demo.ipynb  UNet.yml
examples/Synthesis/: Config.yml  Config_GAN.yml  Evaluation.yml  Model.py  Prediction.yml  README.md  Synthesis_demo.ipynb  UNetpp.py  UnNormalize.py
konfai/: __init__.py  app.py  app_server.py  evaluator.py  export.py  main.py  metric.py  predictor.py  trainer.py
konfai-apps/: README.md  pyproject.toml
konfai-apps/konfai_apps/: __init__.py  app.py  app_repository.py  app_server.py  bundle.py  cli.py
konfai-apps/tests/: conftest.py
konfai-apps/tests/assets/: apps.json
konfai-apps/tests/assets/AppClientRemote/TinySynthesisApp/: Prediction.yml  app.json
konfai-apps/tests/assets/Baselines/: Evaluation.json  Uncertainties.json
konfai-apps/tests/assets/Dataset/P001/: MASK.mha
konfai-apps/tests/integration/: test_app_server_http.py  test_konfai_app_client_remote.py  test_konfai_apps.py
konfai-apps/tests/unit/: test_app_repository.py  test_app_runtime.py  test_app_server_helpers.py  test_bundle.py  test_cli.py
konfai/data/: HDF5.py  __init__.py  augmentation.py  data_manager.py  dataset.py  patching.py  transform.py
konfai/metric/: __init__.py  measure.py  schedulers.py
konfai/models/classification/: convNeXt.py  resnet.py
konfai/models/generation/: cStyleGan.py  ddpm.py  diffusionGan.py  gan.py  vae.py
konfai/models/registration/: registration.py
konfai/models/representation/: representation.py
konfai/models/segmentation/: NestedUNet.py  UNet.py
konfai/network/: __init__.py  blocks.py  network.py
konfai/utils/: ITK.py  Registration.py  __init__.py  app_repository.py  config.py  dataset.py  dicom.py  errors.py  model_builder.py  ome_zarr.py  runtime.py  utils.py
scripts/: check_commit_message.py
tests/assets/Baselines/: Evaluation.json  Uncertainties.json
tests/assets/Workflows/: Config.yml  Evaluation.yml  Prediction.yml  TinySynth.py
tests/integration/: test_konfai_app_client_remote.py  test_konfai_apps.py  test_konfai_core_workflows.py
tests/unit/: test_app_repository.py  test_app_runtime.py  test_app_server_helpers.py  test_app_server_http.py  test_audit_fixes.py  test_cli_entry_points.py  test_config.py  test_config_validation.py  test_criterion_loaders.py  test_dataset_streaming.py  test_early_stopping.py  test_error_messages.py  test_imaging_formats.py  test_imaging_roundtrip.py  test_imports.py  test_inline_augmentations.py  test_main_cli.py  test_model_builder.py  test_named_forward.py  test_onnx_export.py  test_package.py  test_patching.py  test_path_specs.py  test_perf_elegance_fixes.py  test_predictor_memory.py  test_runtime_guards.py  test_trainer_checkpoints.py  test_transform_clip.py  test_yaml_model_equivalence.py
