[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "konfai"
version = "1.1.6"
description = "Modular and configurable Deep Learning framework with YAML and PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

dependencies = [
  "torch",
  "tqdm",
  "numpy",
  "ruamel.yaml",
  "psutil",
  "tensorboard",
  "SimpleITK",
  "lxml",
  "h5py",
  "pynvml"
]

[project.urls]
Homepage = "https://github.com/vboussot/KonfAI"
Repository = "https://github.com/vboussot/KonfAI"
Issues = "https://github.com/vboussot/KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
konfai = "konfai.main:main"
konfai-cluster = "konfai.main:cluster"

[project.optional-dependencies]
vtk = ["vtk"]
lpips = ["lpips"]
cluster = ["submitit"]
plot = ["matplotlib"]

[tool.poetry.dev-dependencies]
pytest = "^8.0"