[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "konfai"
dynamic = ["version"]
description = "Modular and configurable Deep Learning framework with YAML and PyTorch"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

dependencies = [
  "torch",
  "tqdm",
  "numpy",
  "ruamel.yaml",
  "psutil",
  "tensorboard",
  "SimpleITK",
  "lxml",
  "h5py",
  "nvidia-ml-py",
  "requests",
  "huggingface_hub"
]

[project.urls]
Homepage = "https://github.com/vboussot/KonfAI"
Repository = "https://github.com/vboussot/KonfAI"
Issues = "https://github.com/vboussot/KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
konfai = "konfai.main:main"
konfai-apps = "konfai.main:main_apps"
konfai-cluster = "konfai.main:cluster"

[project.optional-dependencies]
vtk = ["vtk"]
lpips = ["lpips"]
cluster = ["submitit"]

[tool.poetry.dev-dependencies]
pytest = "^8.0"

[tool.setuptools_scm]
tag_regex = "^v(?P<version>.*)$"
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"