[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "impact-synth-konfai"
dynamic = ["version"]
description = "Fast and lightweight CLI for synthetic CT generation using IMPACT-Synth models within the KonfAI framework."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

dependencies = [
  "konfai==1.4.9",
]

[project.urls]
Homepage = "https://github.com/vboussot/KonfAI"
Repository = "https://github.com/vboussot/KonfAI"
Issues = "https://github.com/vboussot/KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
impact-synth-konfai = "impact_synth_konfai.cli:main"

[tool.setuptools_scm]
root = "../.."
tag_regex = "^v(?P<version>.*)$"
local_scheme = "no-local-version"