[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "totalsegmentator-konfai"
dynamic = ["version"]
description = "Fast and lightweight TotalSegmentator CLI powered by the KonfAI framework."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

authors = [
  { name = "Valentin Boussot", email = "boussot.v@gmail.com" }
]

dependencies = [
"konfai==1.4.6",
]

[project.urls]
Homepage = "https://github.com/vboussot/KonfAI"
Repository = "https://github.com/vboussot/KonfAI"
Issues = "https://github.com/vboussot/KonfAI/issues"
License = "https://www.apache.org/licenses/LICENSE-2.0"

[project.scripts]
totalsegmentator-konfai = "totalsegmentator_konfai.cli:main"

[tool.setuptools_scm]
root = "../.."
tag_regex = "^v(?P<version>.*)$"
local_scheme = "no-local-version"